# Lumenshake

./: .contract_id  .env.stellar  .gitignore  CI_CD_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_GUIDE.md  DEMO_QUICK_REFERENCE.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  QUICKSTART_TESTNET.md  README.md  SECURITY.md  SEP10_AUTH_GUIDE.md  SETUP_GUIDE.md  SUPPORT.md  UI_INTEGRATION_SUMMARY.md  USDC_SETUP_COMPLETE.md  architecture.md  package-lock.json  run.sh  sep10-auth-tool.html
.github/: CODEOWNERS  pull_request_template.md
backend/: .env.example  Dockerfile  MONEYGRAM_GUIDE.md  README.md  SEP10_SEP12_GUIDE.md  SEP24_SEP31_GUIDE.md  docker-compose.yml  generate-sep10-xdr.js  load-test.js  package-lock.json  package.json  quick-sep10-sign.html  sep10-xdr-generator.html  setup-database.sh  sign-challenge.js  simple-sep10-test.html  test-metrics.js  test-moneygram.js  test-recurring-payroll.js  test-sep10-auth.js  test-sep10-simple.js  (+2 more)
contracts/payroll_contract/: Cargo.toml
contracts/payroll_contract/src/: lib.rs  test.rs
contracts/payroll_contract/test_snapshots/test/: test_add_duplicate_employee.1.json  test_add_employee.1.json  test_add_employee_invalid_amount.1.json  test_claim_payroll.1.json  test_claim_payroll_only_once.1.json  test_full_payroll_flow.1.json  test_initialize_contract.1.json  test_initialize_contract_only_once.1.json  test_pause_contract.1.json  test_pause_unauthorized.1.json  test_register_duplicate_employer.1.json  test_register_employer.1.json  test_run_payroll.1.json  test_run_payroll_duplicate_period.1.json
docs/: PROGRESS.md  (+16 more)
(+100 files in other folders)
