[package]
name = "payroll_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "20.0.0" }

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
derive_arbitrary = "=1.3.2"

[profile.release]
overflow-checks = true
opt-level = "z"
lto = true
codegen-units = 1
